kubernetes/cert-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app-ingress
spec:
  tls:
  - hosts:
    - nambrosini.xzy
    secretName: example-app-tls
  rules:
    - host: nambrosini.xzy
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: example-app
              port:
                number: 80
